--- a/prepros.config
+++ b/prepros.config
@@ -506,11 +506,11 @@
           "segments": [
             {
               "segment": "scss",
-              "replaceWith": "../css"
+              "replaceWith": "../../dist/css"
             },
             {
               "segment": "sass",
-              "replaceWith": "../css"
+              "replaceWith": "../../dist/css"
             }
           ]
         }
@@ -568,7 +568,7 @@
           "segments": [
             {
               "segment": "pug",
-              "replaceWith": "html"
+              "replaceWith": "dist/html"
             }
           ]
         }
@@ -645,7 +645,7 @@
         "output": {
           "extension": ".js",
           "type": "SOURCE_RELATIVE",
-          "relativePath": "",
+          "relativePath": "../../dist/js",
           "suffix": "-dist",
           "alwaysSuffix": false
         }
@@ -925,6 +925,86 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "src/404.pug",
+        "config": {
+          "customOutput": "dist\\404.html"
+        }
+      },
+      {
+        "file": "src/about.pug",
+        "config": {
+          "customOutput": "dist\\about.html"
+        }
+      },
+      {
+        "file": "src/cloud.pug",
+        "config": {
+          "customOutput": "dist\\cloud.html"
+        }
+      },
+      {
+        "file": "src/contacts.pug",
+        "config": {
+          "customOutput": "dist\\contacts.html"
+        }
+      },
+      {
+        "file": "src/css/style.scss",
+        "config": {
+          "customOutput": "dist\\css\\style.css"
+        }
+      },
+      {
+        "file": "src/dedicated.pug",
+        "config": {
+          "customOutput": "dist\\dedicated.html"
+        }
+      },
+      {
+        "file": "src/haas.pug",
+        "config": {
+          "customOutput": "dist\\haas.html"
+        }
+      },
+      {
+        "file": "src/index.pug",
+        "config": {
+          "customOutput": "dist\\index.html"
+        }
+      },
+      {
+        "file": "src/js/main.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "dist\\js\\main.js"
+        }
+      },
+      {
+        "file": "src/news-item.pug",
+        "config": {
+          "customOutput": "dist\\news-item.html"
+        }
+      },
+      {
+        "file": "src/news.pug",
+        "config": {
+          "customOutput": "dist\\news.html"
+        }
+      },
+      {
+        "file": "src/partners.pug",
+        "config": {
+          "customOutput": "dist\\partners.html"
+        }
+      },
+      {
+        "file": "src/vps.pug",
+        "config": {
+          "customOutput": "dist\\vps.html"
+        }
+      }
+    ]
   }
 }
